<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/DetailRelLayoutId"
            android:padding="15dp"
            android:background="@color/colorWhite"
            android:layout_height="wrap_content">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/DetailUserPicid"
                android:layout_width="@dimen/detail_act_profile_image_width"
                android:layout_height="@dimen/detail_act_profile_image_height"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                app:riv_corner_radius="10dp"
                app:riv_border_width="2dip"
                app:riv_border_color="@color/colorWhite"
                app:riv_mutate_background="true"
                app:riv_tile_mode="repeat" />

            <TextView
                android:id="@+id/DetailUserNameId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/DetailUserPicid"
                android:layout_toRightOf="@+id/DetailUserPicid" />

            <TextView
                android:id="@+id/DetailUserTagNameId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/DetailUserNameId"
                android:layout_toEndOf="@+id/DetailUserPicid"
                android:layout_toRightOf="@+id/DetailUserPicid"/>


            <ImageView
                android:id="@+id/TwitterIconId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"/>

            <com.codepath.apps.mysimpletweets.SupportingClasses.LinkifiedTextView
                android:id="@+id/DetailTextBodyId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="@dimen/detail_text_body_size"
                android:layout_below="@+id/DetailUserPicid"
                android:paddingTop="10dp"
                android:text="TextView" />

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/DetailMediaId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                app:riv_corner_radius="10dp"
                app:riv_border_width="2dip"
                app:riv_border_color="@color/colorWhite"
                app:riv_mutate_background="true"
                app:riv_tile_mode="repeat"
                android:layout_below="@+id/DetailTextBodyId"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/DetailRelativeTimeId"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/DetailMediaId"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ReplyButtonImageId"
                android:background="@drawable/ic_reply_logo"
                android:text="@string/reply_button_text"
                android:layout_below="@id/DetailRelativeTimeId" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/RetweetButtonImageId"
                android:background="@drawable/ic_retweet"
                android:layout_marginLeft="75dp"
                android:text="@string/reply_button_text"
                android:layout_below="@id/DetailRelativeTimeId" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/FavoriteButtonImageId"
                android:background="@drawable/ic_heart"
                android:layout_marginLeft="150dp"
                android:text="@string/reply_button_text"
                android:layout_below="@id/DetailRelativeTimeId" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                app:counterEnabled="true"
                app:counterMaxLength="140"
                android:id="@+id/DetailEditTextReplyWrapperId"
                android:layout_below="@id/ReplyButtonImageId"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/DetailEditTextId"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_below="@id/ReplyButtonImageId"
                    android:padding="5dp"
                    android:hint="@string/detail_act_edit_text_hint"
                    android:background="@drawable/tweet_reply_box"
                    android:maxLength="140"
                    android:maxLines="5" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/DetailDoneButtonId"
                android:textColor="@color/colorWhite"
                android:background="@drawable/rounded_buttons"
                android:text="@string/detail_back_text"
                android:layout_below="@+id/DetailEditTextReplyWrapperId"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_buttons"
                android:textColor="@color/colorWhite"
                android:id="@+id/ReplyButtonId"
                android:text="@string/detail_reply_text"
                android:layout_below="@+id/DetailEditTextReplyWrapperId"
                android:layout_alignRight="@+id/TwitterIconId"
                android:layout_alignEnd="@+id/TwitterIconId" />

        </RelativeLayout>
    </ScrollView>
</layout>
